template/iac_eval_terraform/gpt-4o/full/row_239_full_update_1_template_20250518_181759.tf
The Terraform program will create an AWS Virtual Private Cloud (VPC) with a specified CIDR block. It will also create an Internet Gateway and attach it to the VPC. Additionally, a custom route table will be created, and a route will be added to direct traffic destined for a specific CIDR block through the Internet Gateway. The configuration will include the necessary IAM roles and permissions to manage these resources. The AWS provider will be configured to use a specific region.

<iac_template>
```hcl
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "my_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "my_vpc"
  }
}

resource "aws_internet_gateway" "my_igw" {
  vpc_id = aws_vpc.my_vpc.id

  tags = {
    Name = "my_igw"
  }
}

resource "aws_route_table" "my_route_table" {
  vpc_id = aws_vpc.my_vpc.id

  tags = {
    Name = "my_route_table"
  }
}

resource "aws_route" "my_route" {
  route_table_id         = aws_route_table.my_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.my_igw.id
}

resource "aws_route_table_association" "my_route_table_association" {
  subnet_id      = aws_vpc.my_vpc.id
  route_table_id = aws_route_table.my_route_table.id
}
```
</iac_template>
